--- a/vender/magnific-popup.mod.css
+++ b/vender/magnific-popup.mod.css
@@ -8,7 +8,7 @@
 }
 /* overlay animate in */
 .mfp-fade.mfp-bg.mfp-ready {
-  opacity: 0.8;
+  opacity: 0.95;
 }
 /* overlay animate out */
 .mfp-fade.mfp-bg.mfp-removing {
@@ -41,9 +41,9 @@
   z-index: 1042;
   overflow: hidden;
   position: fixed;
-  background: #0b0b0b;
-  opacity: 0.8;
-  filter: alpha(opacity=80); }
+  background: #fff;
+  opacity: 0.95;
+  filter: alpha(opacity=95); }
 
 .mfp-wrap {
   top: 0;
@@ -172,8 +172,8 @@ button.mfp-close {
   top: 0;
   text-decoration: none;
   text-align: center;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
+  /*opacity: 0.65;*/
+  /*filter: alpha(opacity=65);*/
   padding: 0 0 18px 10px;
   color: #FFF;
   font-style: normal;
@@ -206,8 +206,8 @@ button.mfp-close {
 
 .mfp-arrow {
   position: absolute;
-  opacity: 0.65;
-  filter: alpha(opacity=65);
+  /*opacity: 0.65;*/
+  /*filter: alpha(opacity=65);*/
   margin: 0;
   top: 50%;
   margin-top: -55px;
@@ -316,7 +316,7 @@ img.mfp-img {
     width: auto;
     height: auto;
     z-index: -1;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+    /*box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);*/
     background: #444; }
   .mfp-figure small {
     color: #BDBDBD;
